@@ -1,20 +1,34 @@
 package me.bombom.api.v1.auth.dto;
 
+import java.io.Serializable;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import me.bombom.api.v1.member.domain.Member;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.oauth2.core.user.OAuth2User;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.oauth2.core.oidc.OidcIdToken;
+import org.springframework.security.oauth2.core.oidc.OidcUserInfo;
+import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 
 @Getter
-@RequiredArgsConstructor
-public class CustomOAuth2User implements OAuth2User {
+public class CustomOAuth2User implements OidcUser, Serializable {
+
+    private static final long serialVersionUID = 1L;
+    public static final String ROLE_PREFIX = "ROLE_";
 
     private final Map<String, Object> attributes;
     private final Member member;
+    private final OidcIdToken idToken;
+    private final OidcUserInfo userInfo;
+
+    public CustomOAuth2User(Map<String, Object> attributes, Member member, OidcIdToken idToken, OidcUserInfo userInfo) {
+        this.attributes = attributes;
+        this.member = member;
+        this.idToken = idToken;
+        this.userInfo = userInfo;
+    }
 
     @Override
     public Map<String, Object> getAttributes() {
@@ -23,12 +37,38 @@ public class CustomOAuth2User implements OAuth2User {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // TODO: 권한 처리 필요시 구현
-        return Collections.emptyList();
+        if (member == null) {
+            return List.of();
+        }
+        return List.of(new SimpleGrantedAuthority(ROLE_PREFIX + member.getRoleId()));
     }
 
     @Override
     public String getName() {
-        return attributes.get("name").toString();
+        Object name = attributes.get("name");
+        if (name != null) {
+            return name.toString();
+        }
+        Object sub = attributes.get("sub");
+        return sub != null ? sub.toString() : "Unknown";
+    }
+
+    @Override
+    public OidcIdToken getIdToken() {
+        return idToken;
+    }
+
+    @Override
+    public OidcUserInfo getUserInfo() {
+        return userInfo;
+    }
+
+    @Override
+    public Map<String, Object> getClaims() {
+        return attributes;
+    }
+
+    public Member getMember() {
+        return member;
     }
 }
